// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDefaultPasswordValidators returns validators as expected for full Amplify config  1`] = `
Array [
  Object {
    "message": "Password must have at least 8 characters",
    "validate": [Function],
    "validationMode": "onTouched",
  },
  Object {
    "message": "Password must have lower case letters",
    "validate": [Function],
    "validationMode": "onTouched",
  },
  Object {
    "message": "Password must have upper case letters",
    "validate": [Function],
    "validationMode": "onTouched",
  },
  Object {
    "message": "Password must have numbers",
    "validate": [Function],
    "validationMode": "onTouched",
  },
  Object {
    "message": "Password must have special characters",
    "validate": [Function],
    "validationMode": "onTouched",
  },
]
`;

exports[`getDefaultPasswordValidators returns validators as expected for partial Amplify config  1`] = `
Array [
  Object {
    "message": "Password must have lower case letters",
    "validate": [Function],
    "validationMode": "onTouched",
  },
  Object {
    "message": "Password must have upper case letters",
    "validate": [Function],
    "validationMode": "onTouched",
  },
]
`;
